// Code generated by ent, DO NOT EDIT.

package ent

import (
	"common/db/ent/point"
	"common/db/ent/subtask"
	"fmt"
	"strings"

	"entgo.io/ent"
	"entgo.io/ent/dialect/sql"
)

// SubTask is the model entity for the SubTask schema.
type SubTask struct {
	config
	// ID of the ent.
	ID int `json:"id,omitempty"`
	// Edges holds the relations/edges for other nodes in the graph.
	// The values are being populated by the SubTaskQuery when eager-loading is set.
	Edges        SubTaskEdges `json:"edges"`
	selectValues sql.SelectValues
}

// SubTaskEdges holds the relations/edges for other nodes in the graph.
type SubTaskEdges struct {
	// Point holds the value of the point edge.
	Point *Point `json:"point,omitempty"`
	// Task holds the value of the task edge.
	Task []*Task `json:"task,omitempty"`
	// loadedTypes holds the information for reporting if a
	// type was loaded (or requested) in eager-loading or not.
	loadedTypes [2]bool
}

// PointOrErr returns the Point value or an error if the edge
// was not loaded in eager-loading, or loaded but was not found.
func (e SubTaskEdges) PointOrErr() (*Point, error) {
	if e.Point != nil {
		return e.Point, nil
	} else if e.loadedTypes[0] {
		return nil, &NotFoundError{label: point.Label}
	}
	return nil, &NotLoadedError{edge: "point"}
}

// TaskOrErr returns the Task value or an error if the edge
// was not loaded in eager-loading.
func (e SubTaskEdges) TaskOrErr() ([]*Task, error) {
	if e.loadedTypes[1] {
		return e.Task, nil
	}
	return nil, &NotLoadedError{edge: "task"}
}

// scanValues returns the types for scanning values from sql.Rows.
func (*SubTask) scanValues(columns []string) ([]any, error) {
	values := make([]any, len(columns))
	for i := range columns {
		switch columns[i] {
		case subtask.FieldID:
			values[i] = new(sql.NullInt64)
		default:
			values[i] = new(sql.UnknownType)
		}
	}
	return values, nil
}

// assignValues assigns the values that were returned from sql.Rows (after scanning)
// to the SubTask fields.
func (st *SubTask) assignValues(columns []string, values []any) error {
	if m, n := len(values), len(columns); m < n {
		return fmt.Errorf("mismatch number of scan values: %d != %d", m, n)
	}
	for i := range columns {
		switch columns[i] {
		case subtask.FieldID:
			value, ok := values[i].(*sql.NullInt64)
			if !ok {
				return fmt.Errorf("unexpected type %T for field id", value)
			}
			st.ID = int(value.Int64)
		default:
			st.selectValues.Set(columns[i], values[i])
		}
	}
	return nil
}

// Value returns the ent.Value that was dynamically selected and assigned to the SubTask.
// This includes values selected through modifiers, order, etc.
func (st *SubTask) Value(name string) (ent.Value, error) {
	return st.selectValues.Get(name)
}

// QueryPoint queries the "point" edge of the SubTask entity.
func (st *SubTask) QueryPoint() *PointQuery {
	return NewSubTaskClient(st.config).QueryPoint(st)
}

// QueryTask queries the "task" edge of the SubTask entity.
func (st *SubTask) QueryTask() *TaskQuery {
	return NewSubTaskClient(st.config).QueryTask(st)
}

// Update returns a builder for updating this SubTask.
// Note that you need to call SubTask.Unwrap() before calling this method if this SubTask
// was returned from a transaction, and the transaction was committed or rolled back.
func (st *SubTask) Update() *SubTaskUpdateOne {
	return NewSubTaskClient(st.config).UpdateOne(st)
}

// Unwrap unwraps the SubTask entity that was returned from a transaction after it was closed,
// so that all future queries will be executed through the driver which created the transaction.
func (st *SubTask) Unwrap() *SubTask {
	_tx, ok := st.config.driver.(*txDriver)
	if !ok {
		panic("ent: SubTask is not a transactional entity")
	}
	st.config.driver = _tx.drv
	return st
}

// String implements the fmt.Stringer.
func (st *SubTask) String() string {
	var builder strings.Builder
	builder.WriteString("SubTask(")
	builder.WriteString(fmt.Sprintf("id=%v", st.ID))
	builder.WriteByte(')')
	return builder.String()
}

// SubTasks is a parsable slice of SubTask.
type SubTasks []*SubTask
