// Code generated by ent, DO NOT EDIT.

package ent

import (
	"common/db/ent/point"
	"common/db/ent/subtask"
	"common/db/ent/task"
	"fmt"
	"strings"
	"time"

	"entgo.io/ent"
	"entgo.io/ent/dialect/sql"
)

// Task is the model entity for the Task schema.
type Task struct {
	config `json:"-"`
	// ID of the ent.
	ID int `json:"id,omitempty"`
	// Title holds the value of the "title" field.
	Title string `json:"title,omitempty"`
	// TotalStatus holds the value of the "total_status" field.
	TotalStatus int `json:"total_status,omitempty"`
	// CreatedAt holds the value of the "created_at" field.
	CreatedAt time.Time `json:"created_at,omitempty"`
	// ModifiedAt holds the value of the "modified_at" field.
	ModifiedAt time.Time `json:"modified_at,omitempty"`
	// Edges holds the relations/edges for other nodes in the graph.
	// The values are being populated by the TaskQuery when eager-loading is set.
	Edges        TaskEdges `json:"edges"`
	task_subtask *int
	selectValues sql.SelectValues
}

// TaskEdges holds the relations/edges for other nodes in the graph.
type TaskEdges struct {
	// Subtask holds the value of the subtask edge.
	Subtask *SubTask `json:"subtask,omitempty"`
	// SuccessPoint holds the value of the success_point edge.
	SuccessPoint *Point `json:"success_point,omitempty"`
	// UserID holds the value of the user_id edge.
	UserID []*Member `json:"user_id,omitempty"`
	// loadedTypes holds the information for reporting if a
	// type was loaded (or requested) in eager-loading or not.
	loadedTypes [3]bool
}

// SubtaskOrErr returns the Subtask value or an error if the edge
// was not loaded in eager-loading, or loaded but was not found.
func (e TaskEdges) SubtaskOrErr() (*SubTask, error) {
	if e.Subtask != nil {
		return e.Subtask, nil
	} else if e.loadedTypes[0] {
		return nil, &NotFoundError{label: subtask.Label}
	}
	return nil, &NotLoadedError{edge: "subtask"}
}

// SuccessPointOrErr returns the SuccessPoint value or an error if the edge
// was not loaded in eager-loading, or loaded but was not found.
func (e TaskEdges) SuccessPointOrErr() (*Point, error) {
	if e.SuccessPoint != nil {
		return e.SuccessPoint, nil
	} else if e.loadedTypes[1] {
		return nil, &NotFoundError{label: point.Label}
	}
	return nil, &NotLoadedError{edge: "success_point"}
}

// UserIDOrErr returns the UserID value or an error if the edge
// was not loaded in eager-loading.
func (e TaskEdges) UserIDOrErr() ([]*Member, error) {
	if e.loadedTypes[2] {
		return e.UserID, nil
	}
	return nil, &NotLoadedError{edge: "user_id"}
}

// scanValues returns the types for scanning values from sql.Rows.
func (*Task) scanValues(columns []string) ([]any, error) {
	values := make([]any, len(columns))
	for i := range columns {
		switch columns[i] {
		case task.FieldID, task.FieldTotalStatus:
			values[i] = new(sql.NullInt64)
		case task.FieldTitle:
			values[i] = new(sql.NullString)
		case task.FieldCreatedAt, task.FieldModifiedAt:
			values[i] = new(sql.NullTime)
		case task.ForeignKeys[0]: // task_subtask
			values[i] = new(sql.NullInt64)
		default:
			values[i] = new(sql.UnknownType)
		}
	}
	return values, nil
}

// assignValues assigns the values that were returned from sql.Rows (after scanning)
// to the Task fields.
func (t *Task) assignValues(columns []string, values []any) error {
	if m, n := len(values), len(columns); m < n {
		return fmt.Errorf("mismatch number of scan values: %d != %d", m, n)
	}
	for i := range columns {
		switch columns[i] {
		case task.FieldID:
			value, ok := values[i].(*sql.NullInt64)
			if !ok {
				return fmt.Errorf("unexpected type %T for field id", value)
			}
			t.ID = int(value.Int64)
		case task.FieldTitle:
			if value, ok := values[i].(*sql.NullString); !ok {
				return fmt.Errorf("unexpected type %T for field title", values[i])
			} else if value.Valid {
				t.Title = value.String
			}
		case task.FieldTotalStatus:
			if value, ok := values[i].(*sql.NullInt64); !ok {
				return fmt.Errorf("unexpected type %T for field total_status", values[i])
			} else if value.Valid {
				t.TotalStatus = int(value.Int64)
			}
		case task.FieldCreatedAt:
			if value, ok := values[i].(*sql.NullTime); !ok {
				return fmt.Errorf("unexpected type %T for field created_at", values[i])
			} else if value.Valid {
				t.CreatedAt = value.Time
			}
		case task.FieldModifiedAt:
			if value, ok := values[i].(*sql.NullTime); !ok {
				return fmt.Errorf("unexpected type %T for field modified_at", values[i])
			} else if value.Valid {
				t.ModifiedAt = value.Time
			}
		case task.ForeignKeys[0]:
			if value, ok := values[i].(*sql.NullInt64); !ok {
				return fmt.Errorf("unexpected type %T for edge-field task_subtask", value)
			} else if value.Valid {
				t.task_subtask = new(int)
				*t.task_subtask = int(value.Int64)
			}
		default:
			t.selectValues.Set(columns[i], values[i])
		}
	}
	return nil
}

// Value returns the ent.Value that was dynamically selected and assigned to the Task.
// This includes values selected through modifiers, order, etc.
func (t *Task) Value(name string) (ent.Value, error) {
	return t.selectValues.Get(name)
}

// QuerySubtask queries the "subtask" edge of the Task entity.
func (t *Task) QuerySubtask() *SubTaskQuery {
	return NewTaskClient(t.config).QuerySubtask(t)
}

// QuerySuccessPoint queries the "success_point" edge of the Task entity.
func (t *Task) QuerySuccessPoint() *PointQuery {
	return NewTaskClient(t.config).QuerySuccessPoint(t)
}

// QueryUserID queries the "user_id" edge of the Task entity.
func (t *Task) QueryUserID() *MemberQuery {
	return NewTaskClient(t.config).QueryUserID(t)
}

// Update returns a builder for updating this Task.
// Note that you need to call Task.Unwrap() before calling this method if this Task
// was returned from a transaction, and the transaction was committed or rolled back.
func (t *Task) Update() *TaskUpdateOne {
	return NewTaskClient(t.config).UpdateOne(t)
}

// Unwrap unwraps the Task entity that was returned from a transaction after it was closed,
// so that all future queries will be executed through the driver which created the transaction.
func (t *Task) Unwrap() *Task {
	_tx, ok := t.config.driver.(*txDriver)
	if !ok {
		panic("ent: Task is not a transactional entity")
	}
	t.config.driver = _tx.drv
	return t
}

// String implements the fmt.Stringer.
func (t *Task) String() string {
	var builder strings.Builder
	builder.WriteString("Task(")
	builder.WriteString(fmt.Sprintf("id=%v, ", t.ID))
	builder.WriteString("title=")
	builder.WriteString(t.Title)
	builder.WriteString(", ")
	builder.WriteString("total_status=")
	builder.WriteString(fmt.Sprintf("%v", t.TotalStatus))
	builder.WriteString(", ")
	builder.WriteString("created_at=")
	builder.WriteString(t.CreatedAt.Format(time.ANSIC))
	builder.WriteString(", ")
	builder.WriteString("modified_at=")
	builder.WriteString(t.ModifiedAt.Format(time.ANSIC))
	builder.WriteByte(')')
	return builder.String()
}

// Tasks is a parsable slice of Task.
type Tasks []*Task
